Fix navbar overlap to map zoom

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -56,7 +56,7 @@ blockquote, p {
     padding-right: 20px;
     justify-content: space-between;
     height: 70px;
-    z-index: 500;
+    z-index: 2000;
 }
 
 .header-logo {
